# claude-seo-dungeon

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  THIRD-PARTY-NOTICES.md  install.ps1  install.sh  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
agents/: seo-backlinks.md  seo-cluster.md  seo-drift.md  seo-performance.md  seo-sxo.md
docs/: INSTALLATION.md  TROUBLESHOOTING.md
dungeon/: index.html  launch.js  package-lock.json  package.json  vite.config.js
dungeon/scripts/: find-feet.js  screenshot-chars.js  screenshot-scroll.js  screenshot-summoning.js
dungeon/server/: index.js
dungeon/src/: activity-log.js  demons-manifest.js  knight-sprite.js  main.js
dungeon/tests/: link-smoke.mjs  run-tests.mjs
extensions/banana/: README.md  install.sh
pdf/: google-seo-reference.md
scripts/: commoncrawl_graph.py  contrast_check.py  dataforseo_costs.py  drift_baseline.py  extract_mobile.py  font_cls_check.py  moz_api.py  release_report.py  validate_backlink_report.py  verify_backlinks.py  visual_analysis_full.py  visual_audit.py  visual_audit_cg.py  visual_audit_claude_github.py  visual_audit_full.py  visual_audit_run.py  visual_capture.py  visual_detail_audit.py  visual_mobile_audit.py  visual_mobile_full_audit.py
(+49 files in other folders)
