[project]
name = "claude-seo-dungeon"
version = "0.1.0"
description = "Gamified 16-bit dungeon crawler that turns SEO audits into boss battles"
requires-python = ">=3.11"
license = "Proprietary"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/avalonreset-pro/claude-seo-dungeon"
Repository = "https://github.com/avalonreset-pro/claude-seo-dungeon"
